# SRSReadSource

./: CMakeLists.txt  README.md  ffmpeg rtmp流程
objs/: Makefile  srs_auto_headers.hpp
objs/openssh/include/openssl/: opensslconf.h
objs/openssh/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
src/app/: srs_app_config.cpp  srs_app_config.hpp  srs_app_conn.cpp  srs_app_conn.hpp  srs_app_listener.cpp  srs_app_listener.hpp  srs_app_log.cpp  srs_app_log.hpp  srs_app_recv_thread.cpp  srs_app_recv_thread.hpp  srs_app_refer.hpp  srs_app_rtmp_conn.cpp  srs_app_rtmp_conn.hpp  srs_app_server.cpp  srs_app_server.hpp  srs_app_st.cpp  srs_app_st.hpp  srs_app_thread.cpp  srs_app_thread.hpp
src/kernel/: srs_kernel_flv.cpp  srs_kernel_flv.hpp  srs_kernel_stream.cpp  srs_kernel_stream.hpp  srs_kernel_utility.cpp
src/main/: srs_main_server.cpp
src/protocol/: srs_protocol_buffer.cpp  srs_protocol_buffer.hpp  srs_protocol_kbps.hpp  srs_rtmp_amf0.cpp  srs_rtmp_stack.cpp  srs_rtmp_stack.hpp  srs_rtmp_utility.cpp
